<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ap.plantui.Bluetooth">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/bt_scrollview" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/bt_tablelayout">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/switchbluetooth"
                android:id="@+id/bt_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:id="@+id/bt_textview" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_devices"
                android:id="@+id/bt_buttonlist" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:id="@+id/bt_buttonscan"
                android:onClick="Scan" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/bt_buttonconnect"
                android:onClick="Connect" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="255dp"
                android:id="@+id/bt_listview" />

        </TableLayout>
    </ScrollView>
</RelativeLayout>
