<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="ap.plantuiapp.TimerMenu">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

    </ScrollView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_timer"
            android:id="@+id/label_timermenuTitle"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="50dp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_awake"
                android:id="@+id/label_awake"
                android:layout_marginRight="20dp" />

            <EditText
                android:inputType="time"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:maxLength="5"
                android:id="@+id/textbox_time1"
                android:hint="12:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=" -> "
                android:id="@+id/label_separator1" />

            <EditText
                android:inputType="time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textbox_time2"
                android:hint="24:00" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_Sleep"
                android:id="@+id/label_sleep"
                android:layout_marginRight="20dp" />

            <EditText
                android:inputType="time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textbox_time3"
                android:hint="24:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=" -> "
                android:id="@+id/label_separator2" />

            <EditText
                android:inputType="time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textbox_time4"
                android:hint="12:00" />

        </TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addtimer"
            android:id="@+id/button_AddTimer"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_removetimer"
            android:id="@+id/button_RemoveTimer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settimer"
            android:id="@+id/button_SetSchedule"
            android:layout_marginTop="5dp" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/list_ShowSchedules"
            />

    </TableLayout>

</RelativeLayout>