<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ap.plantuiapp.grid">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3"
        android:fillViewport="false">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/plantui"
                    android:id="@+id/txtPlantui"
                    android:textSize="50sp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:layout_column="0" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:textAllCaps="false"
                    android:background="@drawable/shapered"
                    android:layout_margin="10dp"
                    android:id="@+id/Btn_Red"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textAllCaps="false"
                    android:background="@drawable/shapegreen"
                    android:layout_margin="10dp"
                    android:id="@+id/Btn_Green"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:background="@drawable/shapeblue"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:id="@+id/Btn_Blue"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:id="@+id/SeekbarRed"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/arrow_red"
                    android:rotation="270"
                    android:max="255"
                    android:progress="5"
                    android:indeterminate="false"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="40dp" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:max="255"
                    android:progress="5"
                    android:progressDrawable="@drawable/seekbar_progress_green"
                    android:thumb="@drawable/aroow_green"
                    android:id="@+id/SeekbarGreen"
                    android:rotation="270"
                    android:indeterminate="false"
                    android:layout_weight="1"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp" />

                <SeekBar
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:id="@+id/SeekbarBlue"
                    android:rotation="270"
                    android:max="255"
                    android:progress="5"
                    android:progressDrawable="@drawable/seekbar_progress_blue"
                    android:thumb="@drawable/arrow_blue"
                    android:layout_marginBottom="40dp"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:layout_marginTop="40dp"
                    android:focusableInTouchMode="false" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewSeekBarRed"
                    android:text="100"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewSeekBarGreen"
                    android:text="100"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewSeekBarBlue"
                    android:text="100"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_timer"
                    android:textAllCaps="false"
                    android:id="@+id/ButtonGoToTimerMenu"
                    android:background="@drawable/shape"
                    android:layout_margin="10dp"
                    android:layout_span="3"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gotobluetoothmenu"
                    android:textAllCaps="false"
                    android:background="@drawable/shape"
                    android:id="@+id/BtnGoToBluetooth"
                    android:layout_margin="10dp"
                    android:layout_span="3"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/help"
                    android:id="@+id/Imghelpbutton"
                    android:layout_column="0" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>
